[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Script/Interaction.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="Animation" id=3]
resource_name = "InteractionLabelPopup"
tracks/0/type = "value"
tracks/0/path = NodePath("WorldMainUI/InteractionLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 37 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WorldMainUI/InteractionLabel:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorldMainUI/InteractionLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WorldMainUI/InteractionLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WorldMainUI/InteractionLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WorldMainUI/InteractionLabel:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1024, 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorldMainUI/InteractionLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WorldMainUI/InteractionLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61199, 0 )
script = ExtResource( 1 )

[node name="BodyShape" type="CollisionShape" parent="."]
transform = Transform( 1.4, 0, 0, 0, -8.74228e-08, 2, 0, -1.2, -5.24537e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="BodyMesh" type="CSGMesh" parent="BodyShape"]
cast_shadow = 3
mesh = SubResource( 2 )

[node name="PivotPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.16457, 0 )

[node name="Camera" type="Camera" parent="PivotPoint"]

[node name="RayCast" type="RayCast" parent="PivotPoint/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collision_mask = 2
collide_with_areas = true
script = ExtResource( 2 )

[node name="MainUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="FPS_label" type="Label" parent="MainUI"]
anchor_right = 1.0
margin_left = 23.0
margin_top = 18.0
margin_right = 37.0
margin_bottom = 40.0
text = "FPS: 999"
valign = 1

[node name="Button2" type="Button" parent="MainUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -9.0
margin_right = 103.0
margin_bottom = 11.0
text = "A button to test the resulatiÄ±on"

[node name="WorldMainUI" type="Control" parent="."]
anchor_top = 0.938333
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="InteractionLabel" type="Label" parent="WorldMainUI"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 614.0
text = "Interact With"
align = 1
valign = 1

[node name="InteractionLabelAnim" type="AnimationPlayer" parent="."]
anims/InteractionLabelPopup = SubResource( 3 )
anims/RESET = SubResource( 4 )
